--- a/RunOut/bin/AndroidManifest.xml
+++ b/RunOut/bin/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.syyazilim.runout.RegistrationActivity"
+            android:name="com.syyazilim.runout.activity.RegistrationActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,23 +26,24 @@
             </intent-filter>
         </activity>         
         <activity
-            android:name="com.syyazilim.runout.MainActivity"
+            android:name="com.syyazilim.runout.activity.MainActivity"
             android:label="@string/app_name"/>
 
         <activity
-            android:name="com.syyazilim.runout.SettingsActivity"
+            android:name="com.syyazilim.runout.activity.SettingsActivity"
             android:label="@string/app_name"/>
     
         <activity
-            android:name="com.syyazilim.runout.AnimationActivity"
+            android:name="com.syyazilim.runout.activity.AnimationActivity"
             android:label="@string/app_name" />
 
         <activity
-            android:name="com.syyazilim.runout.ResultActivity"
+            android:name = "com.syyazilim.runout.activity.CountDownActivity"
+            android:label="@string/app_name" 
+            android:theme="@style/Theme.D1NoTitleDim" />
+        <activity
+            android:name="com.syyazilim.runout.activity.ResultActivity"
             android:label="@string/app_name" />
-
-        <activity android:name="com.syyazilim.runout.CountDownActivity"
-            android:theme="@style/Theme.D1NoTitleDim"></activity>
     </application>
 
 </manifest>
